añadidos valores default de la aplicacion en fichero application.properties + integracion dichas variables en funciones de ordenacion y paginacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+app.default-page-number=0
+app.default-page-size=12
+app.default-max-page-size=24
+app.admin-account-id=1
