debug para optimizar consultas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
+# Habilitar el logging de Hibernate para mostrar las consultas SQL
+ spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
 app.default-page-number=0
 app.default-page-size=12
 app.default-max-page-size=24
