cambios optimizacion publicaciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/blog_spring?rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://localhost/blog_spring
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-
-# Configuracion de spring para permitir la carga de lotes de datos
-
-spring.jpa.properties.hibernate.jdbc.batch_size=200
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-# spring.jpa.properties.hibernate.generate_statistics: true
 
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
