--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost/blog_spring
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+# spring.datasource.url=jdbc:mysql://localhost/blog_spring
+# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# spring.datasource.username=root
+# spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://dpg-cr8rcvqj1k6c73f7mpq0-a:5432/blog_spring
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=blog_spring_user
+spring.datasource.password=zKDkA8SiosC8Shq0rlTl6kwmOBNw7T9c
 
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
