--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>6.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
