--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
-# spring.datasource.url=jdbc:mysql://localhost/blog_spring
-# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-# spring.datasource.username=root
-# spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://dpg-cr8rcvqj1k6c73f7mpq0-a:5432/blog_spring
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=blog_spring_user
-spring.datasource.password=zKDkA8SiosC8Shq0rlTl6kwmOBNw7T9c
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://bfaymnypqk9i80k9raql-mysql.services.clever-cloud.com/bfaymnypqk9i80k9raql
+spring.datasource.username=uzsw3j2jjlydrwdw
+spring.datasource.password=YXDGWaIei1JlFNKRMn0E
+
+spring.jpa.hibernate.ddl-auto=update
 
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 # Habilitar el logging de Hibernate para mostrar las consultas SQL
- spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
 
 app.default-page-number=0
