--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,16 @@
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-
-spring.datasource.url=jdbc:mysql://bfaymnypqk9i80k9raql-mysql.services.clever-cloud.com/bfaymnypqk9i80k9raql
-spring.datasource.username=uzsw3j2jjlydrwdw
-spring.datasource.password=YXDGWaIei1JlFNKRMn0E
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
+# Habilitar el logging de Hibernate para mostrar las consultas SQL
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
-# Habilitar el logging de Hibernate para mostrar las consultas SQL
 spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
+
+# Configuracion de rendimiento de la API
 
 app.default-page-number=0
 app.default-page-size=12
