--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://bfaymnypqk9i80k9raql-mysql.services.clever-cloud.com/bfaymnypqk9i80k9raql
+spring.datasource.username=uzsw3j2jjlydrwdw
+spring.datasource.password=YXDGWaIei1JlFNKRMn0E
 spring.jpa.hibernate.ddl-auto=update
 
 # Habilitar el logging de Hibernate para mostrar las consultas SQL
