--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Habilitar el logging de Hibernate para mostrar las consultas SQL
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
 # Configuracion de rendimiento de la API
 
