--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # Habilitar el logging de Hibernate para mostrar las consultas SQL
 # logging.level.org.hibernate.SQL=DEBUG
@@ -11,7 +17,6 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
 
 # Configuracion de rendimiento de la API
-
 app.default-page-number=0
 app.default-page-size=12
 app.default-max-page-size=24
